Wow that's a lotta shit.

--- a/localisation_synced/horse_planet_names.yml
+++ b/localisation_synced/horse_planet_names.yml
@@ -10,4 +10,4 @@ NAME_Eris:0 "Eris"
 NAME_Discordia:0 "Discordia"
 NAME_Luna:0 "Luna"
 NAME_Manticorea:0 "Manticorea"
-NAME_secret_star:0 "Secret Star"
+NAME_secret_star:0 ""
